# spark_and_non_spark_etl

./: .dockerignore  .pre-commit-config.yaml  Dockerfile.pythonic  Dockerfile.spark  Makefile  README.md  docker-compose.yml  dod.md  pyproject.toml  requirements.md
.kiro/specs/pythonic-etl-benchmark/: design.md  requirements.md  tasks.md
docs/: benchmark-guide.md
notebooks/: README.md
src/data_generation/: README.md  __init__.py  generator.py
